building the ragchat

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     server_name infectioncontrol.ch www.infectioncontrol.ch;
 
     location / {
-        proxy_pass http://react:4173;
+        proxy_pass http://next-js-app:3000;
 
         # WebSocket support
         proxy_http_version 1.1;
