--- a/next-js-app/package.json
+++ b/next-js-app/package.json
@@ -14,9 +14,11 @@
     "@supabase/supabase-js": "^2.46.2",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.10",
     "docx": "^9.1.0",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.464.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
