--- a/next-js-app/package.json
+++ b/next-js-app/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "supabase": "^2.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
