--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,16 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Ensure headers are passed properly
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Pass cookies and session headers
+        proxy_set_header Cookie $http_cookie;
 
         # Ensure that any timeouts are reasonable
         proxy_read_timeout 86400;
@@ -18,22 +27,28 @@ server {
         client_max_body_size 200M;
     }
 
-    # New location for /chat to proxy to localhost:8501
     location /chat {
-
-        #log the request
+        # Log the request
         access_log /var/log/nginx/chat.log;
 
-
         # Proxy to the chat service
-
         proxy_pass http://ragchat:8502;
 
         # WebSocket and timeout support for /chat
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Ensure headers are passed properly
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Pass cookies and session headers
+        proxy_set_header Cookie $http_cookie;
+
         proxy_read_timeout 86400;
         proxy_send_timeout 86400;
     }
