--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,67 +1,33 @@
 server {
     server_name infectioncontrol.ch www.infectioncontrol.ch;
 
-    # General Next.js app routing
     location / {
         proxy_pass http://next-js-app:3000;
+
+        # WebSocket support
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Ensure headers are passed properly
         proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Timeouts
-        proxy_connect_timeout 300;
-        proxy_read_timeout 86400;
-        proxy_send_timeout 86400;
+        # Timeout settings for long-running requests
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 60s;
+        proxy_send_timeout 60s;
 
-        # Optional: Increase body size for large requests
-        client_max_body_size 200M;
+        # Handle large requests
+        client_max_body_size 50M;
+
+        # Prevent caching of dynamic content
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" always;
     }
 
-    # API-specific configuration
-    location /api/ {
-        proxy_pass http://next-js-app:3000; # Forward API requests to the same Next.js server
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Timeouts
-        proxy_connect_timeout 300;
-        proxy_read_timeout 86400;
-        proxy_send_timeout 86400;
-
-        # Optional: Increase body size for large API requests
-        client_max_body_size 200M;
-    }
-
-    # Chat application routing (if applicable)
-    location /chat {
-        proxy_pass http://ragchat:8502;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Timeouts
-        proxy_connect_timeout 300;
-        proxy_read_timeout 86400;
-        proxy_send_timeout 86400;
-    }
-
-    listen 443 ssl;
+    listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/infectioncontrol.ch/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/infectioncontrol.ch/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
@@ -71,9 +37,9 @@ server {
 server {
     if ($host = infectioncontrol.ch) {
         return 308 https://$host$request_uri;
-    }
+    } # managed by Certbot
 
     listen 80;
     server_name infectioncontrol.ch;
-    return 404;
+    return 404; # managed by Certbot
 }
