--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,11 @@
-# Verwenden Sie das offizielle Nginx-Image als Basis
+# Use the official Nginx image as the base
 FROM nginx:alpine
 
-# Entfernen Sie die Standard-Nginx-Konfigurationsdateien
+# Remove default Nginx configuration
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Kopieren Sie die benutzerdefinierte Nginx-Konfigurationsdatei in das Image
+# Copy the custom Nginx configuration into the container
 COPY nginx.conf /etc/nginx/conf.d
+
+# Expose the required ports
+EXPOSE 80 443
