--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,45 +1,50 @@
 server {
     server_name infectioncontrol.ch www.infectioncontrol.ch;
 
+    # Next.js proxy setup
     location / {
         proxy_pass http://next-js-app:3000;
-
-        # WebSocket support
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
-        # Ensure headers are passed properly
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Timeout settings for long-running requests
-        proxy_connect_timeout 60s;
         proxy_read_timeout 60s;
         proxy_send_timeout 60s;
-
-        # Handle large requests
         client_max_body_size 50M;
-
-        # Prevent caching of dynamic content
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" always;
     }
 
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/infectioncontrol.ch/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/infectioncontrol.ch/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    # Chatbot proxy setup
+    location /chat {
+        proxy_pass http://ragchat:8502;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 60s;
+        proxy_send_timeout 60s;
+        client_max_body_size 50M;
+    }
+
+    # SSL configuration
+    listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/infectioncontrol.ch/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/infectioncontrol.ch/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
 
 server {
     if ($host = infectioncontrol.ch) {
         return 308 https://$host$request_uri;
-    } # managed by Certbot
+    }
 
     listen 80;
     server_name infectioncontrol.ch;
-    return 404; # managed by Certbot
+    return 404;
 }
