--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,20 +12,20 @@ services:
       - app-network
     ports:
       - "3000:3000"
+      - "80:3000"
     restart: unless-stopped
 
-  nginx:
-    build: ./nginx
-    depends_on:
-      - next-js-app
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-    networks:
-      - app-network
-    restart: unless-stopped
+#  nginx:
+#    build: ./nginx
+#    depends_on:
+#      - next-js-app
+#    ports:
+#      - "443:443"
+#    volumes:
+#      - /etc/letsencrypt:/etc/letsencrypt
+#    networks:
+#      - app-network
+#    restart: unless-stopped
 
   ragchat:
     image: rag-chatbot
