--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
-version: '3.8'
 services:
+  # Next.js Application
   next-js-app:
     build:
       context: ./next-js-app
@@ -13,7 +13,13 @@ services:
     ports:
       - "3000:3000"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
 
+  # Nginx Reverse Proxy
   nginx:
     build: ./nginx
     depends_on:
@@ -26,6 +32,7 @@ services:
       - app-network
     restart: unless-stopped
 
+  # RAG Chatbot
   ragchat:
     image: rag-chatbot
     command: streamlit run src/app.py --server.port=8502 --server.address=0.0.0.0 --server.baseUrlPath=/chat
