--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,50 +1,108 @@
 server {
     server_name infectioncontrol.ch www.infectioncontrol.ch;
 
-    # Next.js proxy setup
+    # Proxy requests to the Next.js app
     location / {
         proxy_pass http://next-js-app:3000;
+
+        # WebSocket support
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Headers to preserve client information
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 60s;
+
+        # Keep-alive for upstream
+        proxy_set_header Connection "";
+
+        # Timeouts to prevent 502 errors
+        proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
-        client_max_body_size 50M;
+        proxy_read_timeout 60s;
+
+        # Buffer size for large payloads
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        client_max_body_size 10M;
     }
 
-    # Chatbot proxy setup
+    # Proxy API requests
+    location /api/ {
+        proxy_pass http://next-js-app:3000;
+
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # Headers to preserve client information
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Keep-alive for upstream
+        proxy_set_header Connection "";
+
+        # Timeouts to prevent 502 errors
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # Buffer size for large payloads
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        client_max_body_size 10M;
+    }
+
+    # Proxy requests to the chatbot
     location /chat {
         proxy_pass http://ragchat:8502;
+
+        # WebSocket support
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+        # Headers to preserve client information
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 60s;
+
+        # Keep-alive for upstream
+        proxy_set_header Connection "";
+
+        # Timeouts to prevent 502 errors
+        proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
-        client_max_body_size 50M;
+        proxy_read_timeout 60s;
+
+        client_max_body_size 10M;
     }
 
-    # SSL configuration
-    listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/infectioncontrol.ch/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/infectioncontrol.ch/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/infectioncontrol.ch/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/infectioncontrol.ch/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
 
 server {
     if ($host = infectioncontrol.ch) {
         return 308 https://$host$request_uri;
-    }
+    } # managed by Certbot
 
     listen 80;
     server_name infectioncontrol.ch;
-    return 404;
+    return 404; # managed by Certbot
 }
