--- a/next-js-app/Dockerfile
+++ b/next-js-app/Dockerfile
@@ -13,6 +13,7 @@ RUN npm run build
 # Use a smaller base image for serving
 FROM node:18-alpine
 WORKDIR /app
+COPY public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
