--- a/next-js-app/package.json
+++ b/next-js-app/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.2",
+    "@types/swagger-ui-react": "^4.18.3",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.10",
@@ -19,11 +20,12 @@
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.464.0",
-    "next": "15.0.3",
+    "next": "15.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "resend": "^4.0.1-alpha.0",
+    "swagger-ui-react": "^5.18.2",
     "tailwind-merge": "^2.5.4",
     "uuid": "^11.0.3"
   },
