--- a/next-js-app/package.json
+++ b/next-js-app/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/swagger-ui-react": "^4.18.3",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -19,8 +20,10 @@
     "docx": "^9.1.0",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.464.0",
     "next": "15.1.2",
+    "next-swagger-doc": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
